# serverless-cqrs-es-core

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
aggregates/: Cargo.toml
aggregates/cores/order_core/: Cargo.toml
aggregates/cores/order_core/src/: command_types.rs  entities.rs  event_types.rs
aggregates/cores/reservation_core/: Cargo.toml
aggregates/handlers/order/commands_handler/: Cargo.toml
aggregates/handlers/order/commands_handler/src/: command_handler.rs  commands.rs  commands_business_rules.rs  commands_processor.rs
aggregates/handlers/order/events_handler/: Cargo.toml
aggregates/handlers/order/events_handler/src/: event_handler.rs
aggregates/handlers/reservation/commands_handler/: Cargo.toml
aggregates/handlers/reservation/events_handler/: Cargo.toml
aggregates/handlers/reservation/querys_handler/: Cargo.toml
aggregates/shared_library/: Cargo.toml
aggregates/shared_library/src/: lib.rs
lib/: eventbus-delivery-rules.ts  eventbus_delivery_rules.ts  order-aggregate-stack.ts  reservation-aggregate-stack.ts  shared-functions.ts
rust_app/: Cargo.toml
rust_app/aggregates_common_lib/: Cargo.toml
rust_app/aggregates_common_lib/src/: appsync_event_structure.rs  current_state.rs  event_emitter.rs
rust_app/aggregates_cores/order/: Cargo.toml
rust_app/aggregates_cores/order/src/: event_types.rs  lib.rs
rust_app/aggregates_handlers/order/command_handler/: Cargo.toml
rust_app/aggregates_handlers/order/command_handler/src/: command_handler.rs  commands.rs  commands_processor.rs  main.rs
rust_app/aggregates_handlers/order/event_handler/: Cargo.toml
rust_app/aggregates_handlers/order/event_handler/src/: event_handler.rs  main.rs
rust_app/aggregates_handlers/order/test_cmds_evts/: change_order_status_command.json  create_order_command.json
test/: serverless-cqrs-es-app.test.ts
