[workspace]
resolver = "2"

# PROJECT UNDER CONSTRUCTION #

members = [
    "shared_library", # basic implementation

    # Order Domain Aggregate
    "cores/order_core", # basic implementation
    "handlers/order/commands_handler", #basic implementation
    "handlers/order/events_handler", # Basic implementation
    "handlers/order/querys_handler", # Not implemented yet
    
    # Reservation Domain Aggregate 
    "cores/reservation_core", # Not implemented yet
    "handlers/order/commands_handler", # Not implemented yet
    "handlers/order/events_handler", # Not implemented yet
    "handlers/order/querys_handler", # Not implemented yet
]
