[package]
name = "aggregates_common_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.39.0"
serde = "1"
serde_derive = "1.0"
aws-sdk-eventbridge = "1.36.0"
lambda_runtime = "0.12.0"
serde_json = "1.0.121"