[package]
name = "order_core"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.12.0"
serde = "1"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.38"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.39.0"
aggregates_common_lib = { path = "../../aggregates_common_lib" }